# catalyst

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.openhost  INSTR.md  README.md  REPORT.md  openhost.toml  pyproject.toml  session_id.txt  theory.md
bifurcation_gym/: .gemini  CLAUDE.md  GEMINI.md  pyproject.toml  shallow_mlps
bifurcation_gym/.gemini/: skills
bifurcation_gym/src/: context_manager.py
bifurcation_gym/tmp/: CLAUDE.md
sharpening_gym/: .gemini  CLAUDE.md  GEMINI.md  pyproject.toml
src/: AGENTS.md  ORCHESTRATOR_README.md  README.md  config.yaml  context_manager.py  create_environment.py  default_environment_pyproject.toml  pyproject.toml  run.sh  run_experiment.py  server.py  test_context_manager.py  test_server.py  theory_evolver.py
src/claude_skills/: settings.json  settings.local.json
src/claude_skills/skills/consensus/: SKILL.md
src/claude_skills/skills/develop-theory/: SKILL.md
src/claude_skills/skills/edit-theory/: SKILL.md
src/claude_skills/skills/execute-proposal/: SKILL.md
src/claude_skills/skills/expand-hypothesis/: SKILL.md
src/claude_skills/skills/expand-theory/: SKILL.md
src/claude_skills/skills/explore/: SKILL.md
src/claude_skills/skills/falsify-hypothesis/: SKILL.md
src/claude_skills/skills/generate-solution/: SKILL.md
src/claude_skills/skills/import-theory/: SKILL.md
src/claude_skills/skills/improve-adherence/: SKILL.md
src/claude_skills/skills/integrate-interpretations/: SKILL.md
src/claude_skills/skills/interpret-experiment/: SKILL.md
src/claude_skills/skills/interpret-result/: SKILL.md
src/claude_skills/skills/literature-review/: SKILL.md
src/claude_skills/skills/polish-theory/: SKILL.md
src/claude_skills/skills/predict-experiments/: SKILL.md
src/claude_skills/skills/propose-experiment/: SKILL.md
src/claude_skills/skills/rank-experiment-proposals/: SKILL.md
src/claude_skills/skills/rank-experiments/: SKILL.md
src/claude_skills/skills/rank-explanatory-power/: SKILL.md
src/claude_skills/skills/rank-predictions/: SKILL.md
src/claude_skills/skills/rank-predictive-power/: SKILL.md
src/claude_skills/skills/rank-proposals/: SKILL.md
src/claude_skills/skills/rank-theories/: SKILL.md
src/claude_skills/skills/rank-theories-on-experiment/: SKILL.md
src/claude_skills/skills/refine-hypothesis/: SKILL.md
src/claude_skills/skills/refine-interpretations/: SKILL.md
src/claude_skills/skills/refine-theory/: SKILL.md
src/claude_skills/skills/review-adherence/: SKILL.md
src/claude_skills/skills/review-interpretations/: SKILL.md
src/claude_skills/skills/review-theory/: SKILL.md
src/claude_skills/skills/run-experiment/: SKILL.md
src/claude_skills/skills/score-guidance-adherence/: SKILL.md
src/claude_skills/skills/score-length/: SKILL.md
src/claude_skills/skills/score-soundness/: SKILL.md
src/claude_skills/skills/score-theories/: SKILL.md
src/claude_skills/skills/score-theory-local-subscores/: SKILL.md
src/claude_skills/skills/score-theory-solutions/: SKILL.md
src/claude_skills/skills/search-literature/: SKILL.md
src/claude_skills/skills/smoke/: SKILL.md
src/claude_skills/skills/streamline-theory/: SKILL.md
src/claude_skills/skills/streamline-theory-variations/: SKILL.md
src/claude_skills/skills/suggest-expansions/: SKILL.md
src/claude_skills/skills/summarize-goal-progress/: SKILL.md
src/claude_skills/skills/summarize-research/: SKILL.md
src/claude_skills/skills/support-idea/: SKILL.md
src/claude_skills/skills/support-theory/: SKILL.md
src/docs/: cli.md  per_task_agent_reuse_notes.md  quickstart.md  steering.md  workflow.md
src/framework/: logging.py
src/framework/agents/: __init__.py  refiner.py  reviewer.py
src/framework/prompts/: interpreter.md
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  api.ts  constants.ts  index.css  utils.ts
src/gemini_skills/: GEMINI.md  policy.toml  settings.json  skills  system.md
src/gemini_skills/agents/: scientist.md
src/orchestrator/: addons.py  agent_runner.py  harness.py  models.py  orchestrator.py  prompts.py  state.py  utils.py
src/orchestrator/addons/: __init__.py  base.py  edit_theory.py  evolve_loop.py  evolve_solution_loop.py  expand_theory.py  falsify_hypothesis.py  generate_solution.py  improve_adherence.py  polish_theory.py  refine_hypothesis.py  refine_theory.py  refinement_loop.py  review_adherence.py  review_hypothesis.py  review_theory.py  score_solutions.py  score_theories.py  solve_goal_loop.py  streamline_theory.py  streamline_theory_variations.py  suggest_expansions.py  summarize_goal_progress.py  summarize_research.py  write_different_theory.py
src/orchestrator/agents/: __init__.py  agy.py  base.py  claude.py  cli_base.py  codex.py  gemini.py  mngr_antigravity.py  mngr_claude.py  mngr_gemini.py  mngr_runner.py
src/orchestrator/tests/: helpers.py  test_agents.py  test_classification_explicit.py  test_harness.py  test_mngr_environment.py  test_orchestrator.py  test_parallel_step_runner.py  test_state.py  test_utils.py  test_workflows.py  test_workflows_common.py
src/orchestrator/workflows/: __init__.py  _smoke.py  base.py  common.py  develop_theory.py  develop_theory_linear.py  import_theory.py  refine_theory_idea.py  refine_theory_idea_linear.py  smoke.py  solve_goal_linear.py  solve_verifiable_goal.py  solve_verifiable_goal_linear.py  solve_verifiable_goal_multi_strand.py
src/organisms/seed_001/: metadata.json  theory.md
src/scripts/: smoke_test_antigravity_runner.py  smoke_test_direct_runner.py  smoke_test_external_pause.py  smoke_test_legacy_runner.py  smoke_test_mngr_runner.py  smoke_test_multi_turn.py  smoke_test_orchestrator.py  smoke_test_parallel_subagents.py  smoke_test_resume_in_place.py
src/shallow_mlps/: plot.py  simulation.py
templates/bifurcation/: CLAUDE.md  GEMINI.md  pyproject.toml
templates/bifurcation/shallow_mlps/: analyze.py  cli.py  simulation.py  targets.py
(+95 files in other folders)
