[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scientist"
version = "0.1.0"
description = "AI-driven scientific investigation framework for shallow MLP bifurcation"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "anthropic>=0.39",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
shallow-mlps = "shallow_mlps.cli:main"
ai-scientist = "framework.coordinator:main"

[tool.setuptools.packages.find]
include = ["shallow_mlps*", "framework*"]
