[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scientist"
version = "0.1.0"
description = "Experiment setup for shallow MLPs"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "anthropic>=0.39",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "darwinian-evolver",
]

[project.scripts]
shallow-mlps = "shallow_mlps.cli:main"

[tool.setuptools.packages.find]
include = ["shallow_mlps*"]

[tool.uv]
exclude-newer = "2 week"

[tool.uv.sources]
darwinian-evolver = { path = "../agents/multiverse/darwinian_evolver", editable = true }
