[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scientist"
version = "0.1.0"
description = "Experiment setup for the edge of stability"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "anthropic>=0.39",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "darwinian-evolver",
    "scipy>=1.17.1",
]

[tool.uv]
exclude-newer = "2 week"

[tool.uv.sources]
darwinian-evolver = { path = "../darwinian_evolver", editable = true }
