[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst"
version = "0.1.0"
description = "AI-driven scientific research agent"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "darwinian-evolver",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "python-multipart>=0.0.26",
    "imbue-mngr>=0.2.12",
    "imbue-mngr-claude>=0.2.12",
    "imbue-mngr-antigravity>=0.1.3",
    "imbue-mngr-wait>=0.1.9",
]

[tool.setuptools]
packages = ["orchestrator"]

[project.scripts]
shallow-mlps = "shallow_mlps.cli:main"

[tool.uv]
exclude-newer = "2 week"
exclude-newer-package = { imbue-mngr = "2026-06-09", imbue-mngr-claude = "2026-06-09", imbue-mngr-antigravity = "2026-06-09", imbue-mngr-wait = "2026-06-09", imbue-common = "2026-06-09", concurrency-group = "2026-06-09", resource-guards = "2026-06-09" }

[tool.uv.sources]
darwinian-evolver = { path = "../darwinian_evolver", editable = true }
