[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst"
version = "0.1.0"
description = "AI-driven scientific research agent"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "darwinian-evolver",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "python-multipart>=0.0.26",
    "imbue-mngr>=0.2.17",
    "imbue-mngr-claude>=0.2.17",
    "imbue-mngr-antigravity>=0.1.8",
    "imbue-mngr-wait>=0.1.14",
]

[tool.setuptools]
packages = ["orchestrator"]

[project.scripts]
shallow-mlps = "shallow_mlps.cli:main"

[tool.uv]
exclude-newer = "2 week"
exclude-newer-package = { imbue-mngr = "2026-06-18", imbue-mngr-claude = "2026-06-18", imbue-mngr-antigravity = "2026-06-18", imbue-mngr-wait = "2026-06-18", imbue-common = "2026-06-18", concurrency-group = "2026-06-18", resource-guards = "2026-06-18" }

[tool.uv.sources]
darwinian-evolver = { path = "../darwinian_evolver", editable = true }

[tool.ruff.lint]
extend-select = ["PLC0415"]

