[project]
name = "catalyst-environment"
version = "0.1.0"
description = "Experiment setup for shallow MLPs"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "anthropic>=0.39",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "darwinian-evolver",
    "scipy>=1.17.1",
    "simpy>=4.0",
]

[project.scripts]
shallow-mlps = "shallow_mlps.cli:main"

[tool.setuptools.packages.find]
include = ["shallow_mlps*"]

[tool.uv]
exclude-newer = "2 week"

[tool.uv.sources]
darwinian-evolver = { path = "darwinian_evolver", editable = true }
torch = { index = "pytorch-cpu" } 
torchvision = { index = "pytorch-cpu" } 

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
